# Camola

./: EFFECT-CYBERSPACE.md  EFFECT-FACEMESH.md  EFFECT-GLITCH.md  EFFECT-PLASMA.md  EFFECT-TRAILS.md  EFFECTS.md  MODELS.md  PLAN.md  README.md  STYLE.md  camola.py  camola.sh
webcam-fx/: Cargo.toml  README.md
webcam-fx/src/: main.rs
webcam-fx/src/capture/: mod.rs  v4l_capture.rs
webcam-fx/src/output/: loopback.rs  mod.rs
webcam-fx/src/segmentation/: mod.rs  preprocess.rs  rvm.rs  types.rs
